add padding for icon on advance view

BUG=638146

Review-Url: https://codereview.chromium.org/2256883004
Cr-Commit-Position: refs/heads/master@{#412841}

Former-commit-id: e6b66b8b689b6f2b5ba47a06e6ef6c453434b1c0